@@ -24,7 +24,7 @@ Returns, as a string, the location of the machine on which ECL runs."
 (defun lisp-implementation-version ()
   "Args:()
 Returns the version of your ECL as a string."
-  "@PACKAGE_VERSION@ (CVS 2008-03-17 17:51)")
+  "@PACKAGE_VERSION@ (CVS 2008-03-18 22:50)")
 
 (defun machine-type ()
   "Args: ()
