@@ -101,6 +101,10 @@ ECL 0.9k:
    thanks to a more clever use of declarations __declspec(dllexport) and
    __declspec(dllimport).
 
+ - We no longer use the flag --rpath when building ECL. Given the fact that
+   ECL now assumes a standard Unix filesystem structure, this should pose no
+   problem. For nonstandard locations, you will have to define LD_LIBRARY_PATH
+
 * System design:
 
  - We introduce a new kind of lisp objects, the stack frames. These are objects
